--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "*"
-uuid = "0.8.1"
+uuid = { version = "0.8.1", features = ["v4"] }
 chrono = "0.4.10"
 sled = "0.31.0"
 byteorder = "1.3.4"
