--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ uuid = { version = "0.8.1", features = ["v4"] }
 chrono = "0.4.10"
 sled = "0.31.0"
 byteorder = "1.3.4"
+actix = "0.9.0"
+actix-web = "2.0.0"
+actix-web-actors = "2.0.0"
+rand = "0.7.3"
