--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2018"
 
 [dependencies]
 anyhow = "*"
-uuid = { version = "0.8.1", features = ["v4"] }
 chrono = "0.4.10"
 sled = "0.31.0"
 byteorder = "1.3.4"
@@ -17,3 +16,5 @@ actix-web = "2.0.0"
 actix-web-actors = "2.0.0"
 rand = "0.7.3"
 actix-rt = "1.0.0"
+serde_json = "1.0.48"
+serde = "1.0.104"
